# FL-task-arithmetic

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: baseline_nc100_j16.toml  baseline_nc100_j4.toml  baseline_nc100_j8.toml  baseline_nc10_j16.toml  baseline_nc10_j4.toml  baseline_nc10_j8.toml  baseline_nc1_j16.toml  baseline_nc1_j4.toml  baseline_nc1_j8.toml  baseline_nc50_j16.toml  baseline_nc50_j4.toml  baseline_nc50_j8.toml  baseline_nc5_j16.toml  baseline_nc5_j4.toml  baseline_nc5_j8.toml  conf1.toml  high_mag_s50.toml  high_mag_s70.toml  high_mag_s90.toml  low_mag_s50.toml  low_mag_s70.toml  low_mag_s90.toml  most_sens_s50_r1.toml  most_sens_s50_r2.toml  most_sens_s70_r1.toml  most_sens_s70_r2.toml  most_sens_s70_r4.toml  most_sens_s90.toml  most_sens_s90_r1.toml  most_sens_s90_r2.toml  random_s50.toml  random_s70.toml  random_s90.toml  sparse_experiments.toml  task_arithmetic_s50_r1.toml  task_arithmetic_s50_r2.toml  task_arithmetic_s50_r4.toml  task_arithmetic_s50_r8.toml  task_arithmetic_s70_r1.toml  task_arithmetic_s70_r2.toml  (+10 more)
data/: icarl_dataset.py
fl_task_arithmetic/: __init__.py  client_app.py  model.py  sensitivity.py  server_app.py  sparseSGDM.py  strategy.py  task.py
models/: dino_backbone.py  dino_icarl.py  icarl_head.py
notebooks/: CIFAR100_flower-partitioning_visualization.ipynb  Centralized_baseline_collab.ipynb  Centralized_baseline_local.ipynb  DINO_linear_vs_icarl.ipynb  DINO_train_linear_classification_head.ipynb  Task_arithmetich.ipynb  iCaRL.ipynb  run_baseline.ipynb  run_federated.ipynb  run_simulation.ipynb  train_centralized.ipynb  train_icarl.ipynb  wandb_test_load_store.ipynb
utilities/: DINO_linear_vs_icarl.ipynb  baseline.ipynb  iCaRL.ipynb  model.py  sensitivity.py  system_info.py  train_centralized.ipynb  wandb_test_load_store.ipynb  wandb_utils.py
utilities/trained/: nearest_centroid_classifier.pth
utils/: wandb_utils.py
