# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl-task-arithmetic"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.23.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "wandb>=0.17.8"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "erik"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "fl_task_arithmetic.server_app:app"
clientapp = "fl_task_arithmetic.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
num-server-rounds = 20
fraction-train = 0.5
local-epochs = 5
lr = 0.01
val-ratio-of-train = 0.1 # percentage of CIFAR100 training split used as validation
client-test-ratio-of-partition = 0.2 # percentage of the partition received to each client that becomes the test split
client-batch-size = 8 # batch size for client training and evaluation

# number of classes per partition:
# - if set to 1 (min value), 
#       each client receives a partition with sample from only 1 class -> extreme non iid
# - if set to 100 (max value, the number of CIFAR100 fine_labels), 
#       each client receives samples from all the classes -> iid condition
num-classes-per-partition = 5 

# Weights & Biases (wandb) configuration
entity = "aml-fl-project"
project = "fl-task-arithmetic"
group = "experiment-0"
notes = "Federated learning with Flower and CIFAR100"
run_id = 0
# The 'resume' option controls how wandb handles resuming runs.
# Possible values:
#   - "allow": Resume the run if a matching run ID is found, otherwise start a new run.
#   - "must": Only resume if a matching run ID is found, otherwise raise an error.
#   - "never": Always start a new run, never resume.
resume = "allow" 

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with 10 virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 1 # each ClientApp assumes to use 1 CPU core (default is 2)
options.backend.client-resources.num-gpus = 1 # each client uses 100% of GPU Vram
